<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="Register"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/UserNameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="153dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toStartOf="@+id/LastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="268dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toEndOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="287dp"
        android:backgroundTint="#00897B"
        android:onClick="btnRegister"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="287dp"
        android:onClick="btnCancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/Password" />
</androidx.constraintlayout.widget.ConstraintLayout>